[gd_scene load_steps=5 format=3 uid="uid://klb3l4fc8ki8"]

[ext_resource type="Script" uid="uid://dywro8i5iwi23" path="res://UI/Buttons/general_button.gd" id="1_lbelf"]
[ext_resource type="Texture2D" uid="uid://b73wqph7o67kd" path="res://UI/Buttons/Assets/PlayButton1.png" id="1_v4m3j"]
[ext_resource type="Texture2D" uid="uid://b8q02rxdvc4d8" path="res://UI/Buttons/Assets/PlayButton2.png" id="2_qmm73"]
[ext_resource type="PackedScene" uid="uid://1knlicbaepmc" path="res://UI/Buttons/SelectionIcon/selection_component.tscn" id="4_v4m3j"]

[node name="GeneralButton" type="TextureButton" node_paths=PackedStringArray("selectComponent")]
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -9.0
offset_top = -8.0
offset_right = 9.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(6.76, 6.76)
pivot_offset = Vector2(9, 8)
texture_normal = ExtResource("1_v4m3j")
texture_pressed = ExtResource("2_qmm73")
script = ExtResource("1_lbelf")
selectComponent = NodePath("SelectionComponent")

[node name="SelectionComponent" parent="." instance=ExtResource("4_v4m3j")]
visible = false
position = Vector2(9.000004, 7.4082866)

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
